<resources>
    <string name="app_name">Workout Agent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
    <string name="workout_agent">Workout Agent</string>
    <string name="logo_image">logo_image</string>
    <string name="title_activity_bottom_navigation_trainer">BottomNavigationTrainerActivity</string>
    <string name="title_activity_bottom_navigation_customer">BottomNavigationCustomerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_activity_trainer">My activity</string>
    <string name="routines_trainer">Routines</string>
    <string name="exercises_trainer">Exercises</string>
    <string name="my_profile">My profile</string>
    <string name="my_users">My users</string>
    <string name="my_routines_trainer">My routines</string>
    <string name="form_exercise_title_hint">Exercise title</string>
    <string name="form_exercise_description_hint">Exercise description</string>
    <string name="form_exercise_tags_hint">Exercise tags (comma separated)</string>
    <string name="form_exercise_photos_hint">Exercise photos (comma separated)</string>
    <string name="form_exercise_create_button">Create exercise</string>
    <string name="customer_email">Email of customer</string>
    <string name="customer_phone">Phone of customer</string>
    <string name="display_customer_height">Height of customer</string>
    <string name="display_customer_weight">Weight of customer</string>
    <string name="customer_surname">Surname of customer</string>
    <string name="customer_name">Name of customer</string>
    <string name="routines">Routines</string>
    <string name="form_user_name_hint">Name</string>
    <string name="form_user_surname_hint">Surname</string>
    <string name="form_user_phone_hint">Phone</string>
    <string name="form_user_email_hint">Email</string>
    <string name="form_user_content_desc_photo">Image of user</string>
    <string name="form_user_dni_hint">DNI</string>
    <string name="form_user_content_desc_calendar">Pick a date</string>
    <string name="form_user_birthday_input">Birthday</string>
    <string name="form_user_height_input">Height</string>
    <string name="form_user_weight_input">Weight</string>
    <string name="birthday_text_display_user">Birth date of customer</string>
    <string name="surname_text_display_user">Surnames of customer</string>
    <string name="name_text_display_customer">Name of customer</string>
    <string name="birthday_text_display_trainer">Birth date of trainer</string>
    <string name="surname_text_display_trainer">Surnames of trainer</string>
    <string name="name_text_display_trainer">Name of trainer</string>
    <string name="evolution_text_display_user">Evolution</string>
    <string name="edit">Edit</string>
    <string name="image_height">Image height</string>
    <string name="customer_height_input">Height (cm)</string>
    <string name="form_user_height_hint">Weight (kg)</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="weight_image">weight_image</string>
    <string name="alert_title_delete_user">You will delete this user</string>
    <string name="alert_title_delete_profile">You will delete this profile</string>
    <string name="alert_title_delete_exercise">You will delete this exercise</string>
    <string name="alert_message_delete">Are you sure?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="t_tulo_de_la_rutina">Título de la rutina</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="apellidos_del_cliente">Apellidos del cliente</string>
    <string name="settings">Settings</string>
    <string name="my_routine">My routine</string>
    <string name="my_activity">My activity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="users">Users</string>
    <string name="form_exercise_save_button">Save exercise</string>
    <string name="form_exercise_delete_button">Delete exercise</string>
    <string name="form_routine_create_button">Create routine</string>
    <string name="form_routine_title_hint">Routine title</string>
    <string name="form_routine_startDate_hint">Start date</string>
    <string name="form_add_day_button">Add day</string>
    <string name="form_day_cancel_button">Cancel</string>
    <string name="t_tulo_de_la_actividad">Título de la actividad</string>
    <string name="form_routine_day_title_hint">Day title</string>
    <string name="form_day_save_button">Save</string>
    <string name="Days">Days</string>
    <string name="add_day_activity_button">Add activity</string>
    <string name="action_save_day_activity">Save</string>
    <string name="add_activity_sets_hint">Sets</string>
    <string name="add_activity_repetitions_hint">Repetitions</string>
    <string name="add_activity_weights_hint">Weights</string>
    <string name="add_activity_exercise_hint">Exercise</string>
    <string name="add_activity_note_hint">Note</string>
    <string name="form_routine_delete_button">Delete routine</string>
    <string name="form_routine_update_button">Save</string>
    <string name="form_routine_edit_button">Edit</string>
    <string name="customer_dni">Dni of customer</string>
    <string name="customer_gender">Gender of customer</string>
    <string name="protein_g">Protein (g)</string>
    <string name="carbohydrates_g">Carbohydrates (g)</string>
    <string name="fats_g">Fats (g)</string>
    <string name="nutrition">Nutrition</string>
    <string name="edit_activity_button">Edit</string>
    <string name="edit_day_button">Delete</string>
    <string name="genre_male">Male</string>
    <string name="genre_female">Female</string>
    <string name="curriculum">Curriculum</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="FAQ">FAQ</string>
    <string name="h1">Identification of the owner of the application</string>
    <string name="p1">This privacy policy has been drawn up in accordance with the provisions of REGULATION (EU) 2016/679 OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL of 27 April 2016 on the protection of individuals with regard to the processing of personal data and on the free movement of such data (RGPD), Organic Law 15/1999 of 13 December on the Protection of Personal Data (LOPD) and its implementing regulations.</string>
    <string name="h2">Who is responsible for the personal data we collect on this application?</string>
    <string name="p2">The owner of this website is WorkoutAgent, with CIF …, residing for these purposes in Avenida de la Reina Mercedes, 41011 - Sevilla (Spain), and email address: workoutagentapp@gmail.com</string>
</resources>