<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.customer.fragments.ProfileCustomerFragment">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewCustomer_displayProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_customer_name_displayProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/name_text_display_customer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageViewCustomer_displayProfile"
        app:layout_constraintVertical_bias="0.75" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        app:cardBackgroundColor="#C1FFEF"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageViewCustomer_displayProfile">

        <LinearLayout
            android:id="@+id/ll_details_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/display_customer_dni_displayProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:drawableStart="@drawable/ic_contact_24dp"
                android:drawablePadding="4dp"
                android:paddingBottom="4dp"
                android:text="@string/customer_dni"
                android:textSize="16sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/display_customer_phone_displayProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:drawablePadding="4dp"
                android:paddingBottom="4dp"
                android:text="@string/customer_phone"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_customer_email_displayProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="4dp"
                android:paddingBottom="4dp"
                android:text="@string/customer_email"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_customer_height_displayProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_height_24dp"
                android:drawablePadding="4dp"
                android:paddingBottom="4dp"
                android:text="@string/display_customer_height"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_customer_weight_displayProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_weight_24dp"
                android:drawablePadding="4dp"
                android:paddingBottom="4dp"
                android:text="@string/display_customer_weight"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_customer_birthday_displayProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_cake_black_24dp"
                android:drawablePadding="4dp"
                android:paddingBottom="4dp"
                android:text="@string/birthday_text_display_user"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <Button
            android:id="@+id/display_customer_button_evolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_statistics_48dp"
            android:text="@string/evolution_text_display_user"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/display_customer_button_nutrition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_diet_black_48dp"
            android:text="@string/nutrition"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_customer_button_routines" />

        <Button
            android:id="@+id/display_customer_button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_white_48dp"
            android:text="@string/edit"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_customer_button_nutrition" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_logout_white_48dp"
            android:text="@string/sign_out"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.879" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>