<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tfg.workoutagent.presentation.ui.routines.trainer.viewModels.CreateRoutineViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.routines.trainer.fragments.CreateRoutineFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/routine_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/form_routine_title_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routine_title_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.title}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/routine_startDate_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/form_routine_startDate_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routine_startDate_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={viewModel.startDate}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_day_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:onClick="@{() -> viewModel.onAddDay()}"
                android:text="@string/form_add_day_button" />

            <Button
                android:id="@+id/create_routine_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:onClick="@{() -> viewModel.onSubmit()}"
                android:text="@string/form_routine_create_button" />

        </LinearLayout>

    </ScrollView>

</layout>